mejorando mi tarjeta digital

--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-Hello World
+<!DOCTYPE html>
+<html lang="es">
+
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Tarjeta Digital - [Tu Nombre]</title>
+    <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+    <div class="card">
+        <h1>[Tu Nombre]</h1>
+        <p class="subtitle">Abogado | Visionario | Tech Lover</p>
+
+        <div class="links">
+            <a href="https://linkedin.com/in/tuusuario" target="_blank">LinkedIn</a>
+            <a href="https://github.com/tuusuario" target="_blank">GitHub</a>
+            <a href="mailto:tu@email.com">Correo</a>
+            <a href="https://instagram.com/tuusuario" target="_blank">Instagram</a>
+        </div>
+
+        <p class="footer">Escanéame o visítame 🔗</p>
+    </div>
+
+    <script src="script.js"></script>
+</body>
+
+</html>
