--- a/index.html
+++ b/index.html
@@ -1,29 +1,43 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tarjeta Digital - [Tu Nombre]</title>
-    <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Nuñez - Diseñador & Desarrollador</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
-
 <body>
-    <div class="card">
-        <h1>[Tu Nombre]</h1>
-        <p class="subtitle">Abogado | Visionario | Tech Lover</p>
-
-        <div class="links">
-            <a href="https://linkedin.com/in/tuusuario" target="_blank">LinkedIn</a>
-            <a href="https://github.com/tuusuario" target="_blank">GitHub</a>
-            <a href="mailto:tu@email.com">Correo</a>
-            <a href="https://instagram.com/tuusuario" target="_blank">Instagram</a>
-        </div>
-
-        <p class="footer">Escanéame o visítame 🔗</p>
+  <div class="card">
+    <div class="card-left">
+      <img src="perfil_linkedIn.jpg" alt="Foto de Nuñez" />
     </div>
+    <div class="card-right">
+      <h1>Nuñez Garcia Abraham Santiago</h1>
+      <p class="subtitle">Diseñador y Desarrollador de Software</p>
 
-    <script src="script.js"></script>
+      <div class="links">
+        <a href="https://www.linkedin.com/in/asnunezg" target="_blank">
+          <i class="fab fa-linkedin"></i> LinkedIn
+        </a>
+        <a href="https://github.com/ASantiagoNunezG" target="_blank">
+          <i class="fab fa-github"></i> GitHub
+        </a>
+        <a href="mailto:abraham.nunez@tecsup.edu.pe">
+          <i class="fas fa-envelope"></i> Correo
+        </a>
+        <a href="tel:+51987654321">
+          <i class="fas fa-phone"></i> Teléfono
+        </a>
+        <a href="https://asantiagonunezg.github.io" target="_blank" rel="noopener noreferrer">
+        <i class="fas fa-globe"></i> Portafolio Web
+        </a>
+      </div>
+
+      <p class="footer">© 2025 Nuñez</p>
+    </div>
+  </div>
+
+  <script src="script.js"></script>
 </body>
-
 </html>
