Sitio personal añadido

--- a/index.html
+++ b/index.html
@@ -1,44 +1,47 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Nuñez - Diseñador & Desarrollador</title>
-  <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Nuñez - Diseñador & Desarrollador</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
+
 <body>
-  <div class="card">
-    <div class="card-left">
-      <img src="perfil_linkedIn.jpg" alt="Foto de Nuñez" />
+    <div class="card">
+        <div class="card-left">
+            <img src="perfil_linkedIn.jpg" alt="Foto de Nuñez" />
+        </div>
+        <div class="card-right">
+            <h1>Nuñez Garcia Abraham Santiago</h1>
+            <p class="subtitle">Diseñador y Desarrollador de Software</p>
+
+            <div class="links">
+                <a href="https://www.asnunezg.com" target="_blank" rel="noopener noreferrer">
+                    <i class="fas fa-globe"></i> Portafolio Web
+                </a>
+                <a href="https://www.linkedin.com/in/asnunezg" target="_blank">
+                    <i class="fab fa-linkedin"></i> LinkedIn
+                </a>
+                <a href="https://github.com/ASantiagoNunezG" target="_blank">
+                    <i class="fab fa-github"></i> GitHub
+                </a>
+                <a href="mailto:abraham.nunez@tecsup.edu.pe">
+                    <i class="fas fa-envelope"></i> Correo
+                </a>
+                <a href="tel:+51987654321">
+                    <i class="fas fa-phone"></i> Teléfono
+                </a>
+
+            </div>
+
+            <p class="footer">© 2025 Nuñez</p>
+        </div>
     </div>
-    <div class="card-right">
-      <h1>Nuñez Garcia Abraham Santiago</h1>
-      <p class="subtitle">Diseñador y Desarrollador de Software</p>
 
-      <div class="links">
-        <a href="https://asantiagonunezg.github.io" target="_blank" rel="noopener noreferrer">
-        <i class="fas fa-globe"></i> Portafolio Web
-        </a>
-        <a href="https://www.linkedin.com/in/asnunezg" target="_blank">
-          <i class="fab fa-linkedin"></i> LinkedIn
-        </a>
-        <a href="https://github.com/ASantiagoNunezG" target="_blank">
-          <i class="fab fa-github"></i> GitHub
-        </a>
-        <a href="mailto:abraham.nunez@tecsup.edu.pe">
-          <i class="fas fa-envelope"></i> Correo
-        </a>
-        <a href="tel:+51987654321">
-          <i class="fas fa-phone"></i> Teléfono
-        </a>
-        
-      </div>
-
-      <p class="footer">© 2025 Nuñez</p>
-    </div>
-  </div>
-
-  <script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
+
 </html>
